--- a/lib/sass/_colors.scss
+++ b/lib/sass/_colors.scss
@@ -23,7 +23,7 @@
 }
 
 .calcite-bgcolor-dark {
-  background-color: $Calcite_Gray_700 !important;
+  background-color: $Calcite_Gray_300_Dark !important;
 }
 
 // White
