--- a/lib/sass/_theme-custom.scss
+++ b/lib/sass/_theme-custom.scss
@@ -59,7 +59,8 @@
   &.calcite-bg-custom {
 
     .panel {
-      background-color: $theme_custom_panel_bg;
+      //background-color: $theme_custom_panel_bg;
+      background-color: transparent;
     }
 
     .panel-heading {
@@ -70,82 +71,6 @@
     .panel-heading:focus {
       background-color: $theme_custom_panel_header_bg_hover;
     }
-
-    // Tabs
-
-    .nav-tabs {
-      border-bottom: none;
-    }
-
-    .nav-tabs > li > a {
-      border: 0;
-      padding-top: 4px;
-    }
-
-    .nav-tabs > li > a:hover,
-    .nav-tabs > li > a:focus {
-      padding-top: 4px;
-      border-top: 0;
-      background-color: $theme_custom_panel_control_bg_hover;
-      @include custom-theme-tab-shadow($theme_custom_panel_tab_shadow_top);
-    }
-
-    .nav-tabs > li.active > a {
-      position: relative;
-      padding-top: 4px;
-      border: 1px solid $theme_custom_panel_control_border_color;
-      border-top: 0;
-      border-bottom-color: transparent;
-      background-color: $theme_custom_panel_control_bg_hover;
-      @include custom-theme-tab-shadow(0 -2px 0 0);
-    }
-
-    .nav-tabs > li.active > a::before,
-    .nav-tabs > li.active > a::after {
-      display: block;
-      content: '';
-      position: absolute;
-      bottom: -1px;
-      height: 0px;
-      width: 999em;
-      border-bottom: 1px solid $theme_custom_panel_control_border_color;
-      pointer-events: none;
-    }
-
-    .nav-tabs > li.active > a::before {
-      right: 100%;
-      margin-right: 1px;
-    }
-
-    .nav-tabs > li.active > a::after {
-      left: 100%;
-      margin-left: 1px;
-    }
-
-    // Controls
-
-    input, 
-    textarea,
-    select {
-      //background-color: $theme_custom_panel_control_bg;
-      background-color: transparent;
-    }
-
-    option {
-      color: $theme_light_panel_text_color;
-      background-color: $theme_light_panel_bg;
-    }
-
-
-    input:not([type="radio"]):not([type="checkbox"]):not([type="submit"]),
-    textarea,
-    select {
-      border: 1px solid $theme_custom_panel_control_border_color;       
-    }
-
-    // Placeholder
-    
-    @include custom-theme-placholder(inherit, 0.65);
 
   }
 }
